Etapa 3 de PW - Estacionamento

--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "Estacionamento",
+  "name": "estacionamento",
   "version": "1.0.0",
-  "description": "Estacionamento",
+  "description": "estacionamento",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.23.2"
+  }
 }
